* CAUTION: if you want to keep PHP 5.2 compatibility, used phpunit/PHP_Timer 1.0.3 max

.Bug fixes:
* PHP 5.4 raises notice error (Array to string conversion) in file cache, while PHP 5.2 and 5.3 did not
* standard reference fixed: mkdir mode parameter is required since PHP 4.0.0 and not 4.2.0 (it became optional)
* multiple reports may now be appended in the same report file


== Version 2.8.1 (2012-09-28)

.Additions and changes:
* none

.Bug fixes:
* fixed latest version of standard and Core references
* fixed curl reference about new PHP 5.4 constants
* fixed default version about anonymous function
* phpci list command raises notice errors


== Version 2.8.0 (2012-09-15)

.Versions summary:
* 2.8.0 support all PHP versions until 5.4.7
* 2.7.0 support all PHP versions until 5.4.6
* 2.6.0 support all PHP versions until 5.4.5
* 2.5.0 support all PHP versions until 5.4.4
* 2.4.0 support all PHP versions until 5.4.3
* 2.3.0 support all PHP versions until 5.4.0
* 2.2.0 support all PHP versions until 5.3.10
* 2.1.0 support all PHP versions until 5.3.8

.Additions and changes:
* add 5 new references data dictionnaries related to extensions:
  amqp, geoip, inclued, mongo, XCache
* introduces a new Reference API that allow to filter elements (interfaces, classes, functions, constants)
on php version or extension release, with or without a particular relationship (like operator in version_compare)
* Full filter support for 25 extensions (that have all releases documented):
  ** amqp (1.0.7)
  ** apc (3.1.13)
  ** enchant (1.1.0)
  ** fileinfo (1.0.5)
  ** filter (0.11.0)
  ** geoip (1.0.8)
  ** hash (1.0)
  ** inclued (0.1.3)
  ** intl (2.0.1)
  ** json (1.2.1)
  ** libxml
  ** lzf (1.6.2)
  ** mailparse (2.1.6)
  ** memcache (3.0.6)
  ** memcached (2.1.0)
  ** mongo (1.2.12)
  ** OAuth (1.2.2)
  ** Phar (2.0.1)
  ** solr (1.0.2)
  ** sphinx (1.2.0)
  ** tidy (2.0)
  ** XCache (2.0.1)
  ** xdebug (2.2.1)
  ** zip (1.11.0)
  ** zlib (2.0)